# Mimxrt1170evkb-figma-lvgl-zephyr

./: .gitignore  README.md  SETUP_ENVIRONMENT.md  west.yml
my_display_app/: CMakeLists.txt  CMakePresets.json  Kconfig  prj.conf
my_display_app/src/: app_ui.c  main.c
my_display_app/src/ui/: .gitignore  app_ui.c  app_ui.h  file_list_gen.cmake  globals.xml  project.xml  real_xml_project.c  real_xml_project.h  real_xml_project_gen.c  real_xml_project_gen.h  user_config.cmake
my_display_app/src/ui/fonts/: font_brewing_data.c  font_status_data.c
my_display_app/src/ui/images/: caramel_frappe_data.c  caramel_macchiato_data.c  latte_data.c  mocha_cream_data.c
my_display_app/src/ui/preview-bin/: lved-runtime.js
my_display_app/src/ui/screens/: drinkscreen.xml  drinkscreen_gen.c  drinkscreen_gen.h  finalscreen.xml  finalscreen_gen.c  finalscreen_gen.h  homescreen.xml  homescreen_gen.c  homescreen_gen.h  orderscreen.xml  orderscreen_gen.c  orderscreen_gen.h  toppingscreen.xml  toppingscreen_gen.c  toppingscreen_gen.h
my_display_app/src/ui_runtime/: app_ui_helpers.c  app_ui_internal.h  drink_screen_controller.c  final_screen_controller.c  home_screen_controller.c  order_screen_controller.c  topping_screen_controller.c
